# code-repair-backend

./: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  deploy.sh  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: deploy.yaml
app/: main.py
app/api/v1/routers/: assessment.py  auth.py  criteria.py  data_sources.py  model.py  pattern.py  query.py  settings.py  user.py
app/core/: config.py  evaluation.py  llm.py  neo4j_client.py  prompts.py  storage.py
app/core/authentication/: auth_middleware.py  auth_token.py
app/core/connections/: clients.py  encryption.py  manager.py
app/core/patterns/: base.py  factory.py
app/core/patterns/handlers/: embedding_handlers.py  graph_handlers.py
app/schemas/: assessment.py  auth.py  criteria.py  data_source.py  graph.py  model.py  pattern.py  query.py  settings.py  user.py
app/tests/: auth_test.py  criteria_test.py  model_test.py  pattern_test.py  user_test.py
