[project]
name = "code-repair-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.0",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "pymongo>=4.6.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.1.0",
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "langchain-neo4j>=0.4.0",
    "deepeval>=3.2.6",
    "langchain-groq>=0.3.6",
]
